# diofant

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .mailmap  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CONTRIBUTING.rst  Changelog  INSTALL  LICENSE  LICENSE.rst  MANIFEST.in  README  README.rst  apidoc.conf  codecov.yml  conftest.py  demidovich.py  isym.py  limits.py  orig.py  pyproject.toml  run.py  setup.cfg  setup.py  shell.py  test.py  test_demidovich.py  test_hashing.py  test_limits.py  todo
.github/: CONTRIBUTING.rst  FUNDING.yml  SUPPORT.rst  dependabot.yml
.github/codeql/: config.yml
.github/workflows/: binder-badge.yml  codeql.yml  linter.yml  publish.yml  test.yml
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  python-sympy.postinst.debhelper  python-sympy.prerm.debhelper  python-sympy.substvars  rules  watch  watch.ex
diofant/: __init__.py  __main__.py  abc.py  config.py
diofant/calculus/: __init__.py  euler.py  finite_diff.py  gruntz.py  limits.py  optimization.py  order.py  residues.py  singularities.py
diofant/combinatorics/: __init__.py  generators.py  graycode.py  group_constructs.py  named_groups.py  partitions.py  perm_groups.py  permutations.py  polyhedron.py  prufer.py  subsets.py  tensor_can.py  testutil.py  util.py
diofant/concrete/: __init__.py  delta.py  expr_with_intlimits.py  expr_with_limits.py  gosper.py  products.py  summations.py  zeilberger.py
diofant/core/: __init__.py  add.py  alphabets.py  assumptions.py  basic.py  cache.py  compatibility.py  containers.py  coreerrors.py  decorators.py  evalf.py  evaluate.py  expr.py  exprtools.py  facts.py  function.py  logic.py  mod.py  mul.py  multidimensional.py  numbers.py  operations.py  power.py  relational.py  rules.py  singleton.py  strategies.py  symbol.py  sympify.py  trace.py
diofant/diffgeom/: __init__.py  diffgeom.py  rn.py
diofant/domains/: __init__.py  algebraicfield.py  characteristiczero.py  complexfield.py  compositedomain.py  domain.py  domainelement.py  expressiondomain.py  field.py  finitefield.py  fractionfield.py  gmpyfinitefield.py  gmpyintegerring.py  gmpyrationalfield.py  groundtypes.py  integerring.py  modularinteger.py  mpelements.py  polynomialring.py  pythonfinitefield.py  pythonintegerring.py  pythonrationalfield.py  quotientring.py  rationalfield.py  realfield.py  ring.py  simpledomain.py
diofant/functions/: __init__.py
diofant/geometry/: __init__.py  curve.py  ellipse.py  entity.py  exceptions.py  line.py  line3d.py  plane.py  point.py  polygon.py  util.py
diofant/integrals/: __init__.py  deltafunctions.py  heurisch.py  integrals.py  manualintegrate.py  meijerint.py  meijerint_doc.py  prde.py  quadrature.py  rationaltools.py  rde.py  risch.py  transforms.py  trigonometry.py
diofant/interactive/: __init__.py  printing.py  session.py
diofant/logic/: FOL.py  __init__.py  boolalg.py  inference.py  utils.py
diofant/matrices/: __init__.py  dense.py  densearith.py  densesolve.py  densetools.py  immutable.py  matrices.py  sparse.py  sparsetools.py
diofant/ntheory/: __init__.py  continued_fraction.py  egyptian_fraction.py  factor_.py  generate.py  modular.py  multinomial.py  partitions_.py  primetest.py  residue_ntheory.py
diofant/parsing/: __init__.py  mathematica.py  maxima.py  sympy_parser.py
diofant/plotting/: __init__.py  experimental_lambdify.py  plot.py  plot_implicit.py
diofant/polys/: __init__.py  compatibility.py  constructor.py  densearith.py  densebasic.py  densetools.py  dispersion.py  distributedmodules.py  euclidtools.py  factorization_alg_field.py  factortools.py  fglmtools.py  fields.py  galoistools.py  groebnertools.py  heuristicgcd.py  modulargcd.py  monomials.py  numberfields.py  orderings.py  orthopolys.py  partfrac.py  polyclasses.py  polyconfig.py  polyerrors.py  polyfuncs.py  polyoptions.py  polyquinticconst.py  polyroots.py  polytools.py  polyutils.py  rationaltools.py  ring_series.py  rings.py  rootisolation.py  rootoftools.py  solvers.py  specialpolys.py  sqfreetools.py  univar.py
diofant/printing/: __init__.py  ccode.py  codeprinter.py  conventions.py  defaults.py  dot.py  fcode.py  jscode.py  lambdarepr.py  latex.py  mathematica.py  mathml.py  octave.py  precedence.py  pretty.py  pretty_symbology.py  printer.py  python.py  repr.py  str.py  stringpict.py  tableform.py  theanocode.py  tree.py
doc/: Makefile  README.rst  aboutus.rst  conf.py  guide.rst  index.rst  install.rst  requirements.txt
docs/: CONTRIBUTING.rst  Makefile  README.rst  aboutus.rst  bibliography.rst  bibtex.json  cli.rst  conf.py  conftest.py  contents.rst  guide.rst  index.rst  install.rst  literature.rst  requirements.txt  robots.txt  sources.bib  sources.rst  spelling_wordlist.txt
examples/: README  README.rst  all.py  basic.py  differential_equations.py  differentiation.py  expansion.py  functions.py  limits_examples.py  mplot2d.py  mplot3d.py  plotting.py  precision.py  prettyprint.py  prettysym.py  printpygame.py  qft.py  relativity.py  series.py  substitution.py  t.py  tensors.py
sym/: __init__.py  add.py  basic.py  functions.py  hashing.py  numbers.py  power.py  symbol.py  utils.py
sympy/: __init__.py  abc.py  conftest.py
tests/: pylintrc  test.py  test_all.py  test_arit.py  test_basic.py  test_complex.py  test_concrete.py  test_demidovich.py  test_diff.py  test_equal.py  test_eval.py  test_evalf.py  test_factorialgamma.py  test_factorials.py  test_functions.py  test_geometry.py  test_graphing.py  test_hashing.py  test_integrals.py  test_latex.py  test_limits.py  test_match.py  test_mathml.py  test_matrices.py  test_numbers.py  test_numerics.py  test_orthogonal_polynomials.py  test_paulialgebra.py  test_plotting.py  test_polynomials.py  test_pretty.py  test_series.py  test_simplify.py  test_solvers.py  test_specfun.py  test_str.py  test_subs.py  test_sums_products.py  test_symbol.py  test_trigonometric.py  (+2 more)
(+1751 files in other folders)
