[build-system]
requires = ['setuptools>=42', 'wheel', 'setuptools_scm[toml]>=6.0']
build-backend = 'setuptools.build_meta'
[tool.setuptools_scm]
[tool.isort]
lines_after_imports = 2
skip = ['diofant/core/expr.py',
        'diofant/__init__.py',
        'diofant/core/__init__.py',
        'diofant/polys/__init__.py']
atomic = true
[tool.pylint.MASTER]
jobs = 0
init_hook = 'import sys; sys.setrecursionlimit(2000)'  # PyCQA/pylint#2388
[tool.pylint.format]
max-line-length = 7000
[tool.pylint.design]
max-locals = 100
max-returns = 35
max-attributes = 30
max-branches = 90
max-parents = 12
max-statements = 310
max-args = 12
max-nested-blocks = 10
max-bool-expr = 10
min-public-methods = 0
max-public-methods = 110
[tool.pylint.similarities]
min-similarity-lines = 10
[tool.pylint.BASIC]
bad-names = []
[tool.pylint.'MESSAGES CONTROL']
disable = ['invalid-name',
           'missing-docstring',
           'unidiomatic-typecheck',
           'bad-mcs-method-argument',
           'too-many-lines',
           'wrong-import-position',
           'non-iterator-returned',
           'relative-beyond-top-level',
           'unbalanced-tuple-unpacking',
           'no-member',
           'not-callable',
           'no-value-for-parameter',
           'invalid-unary-operand-type',
           'parameter-unpacking',
           'import-star-module-level',
           'bad-inline-option',
           'no-self-use',
           'cyclic-import',
           'duplicate-code',
           'redefined-argument-from-local',
           'no-else-return',
           'trailing-comma-tuple',
           'inconsistent-return-statements',
           'dangerous-default-value',
           'protected-access',
           'arguments-differ',
           'abstract-method',
           'no-init',
           'relative-import',
           'fixme',
           'global-variable-undefined',
           'global-variable-not-assigned',
           'global-statement',
           'unused-argument',
           'redefined-outer-name',
           'redefined-builtin',
           'undefined-loop-variable',
           'cell-var-from-loop',
           'keyword-arg-before-vararg',
           'next-method-called',
           'import-outside-toplevel',
           'arguments-out-of-order',
           'consider-using-f-string']
[tool.pytest.ini_options]
doctest_optionflags = ['ELLIPSIS', 'NORMALIZE_WHITESPACE',
                       'IGNORE_EXCEPTION_DETAIL']
addopts = """\
          --durations=20 -r X --doctest-glob='*.rst' \
          --cov-config=pyproject.toml -n auto \
          """
norecursedirs = ['build', '.eggs', '.git']
timeout = 1000
xfail_strict = true
filterwarnings = ['ignore::UserWarning',
                  'error::DeprecationWarning']
[tool.coverage.run]
branch = true
omit = ['conftest.py',
        'diofant/tests/*',
        'diofant/tests/*/*']
parallel = true
[tool.coverage.html]
directory = 'build/coverage/html'
[tool.coverage.report]
exclude_lines = ['pragma: no cover',
                 'except NotImplementedError',
                 'raise NotImplementedError',
                 'return NotImplemented']
show_missing = true
[tool.mypy]
follow_imports = 'silent'
[[tool.mypy.overrides]]
module = ['IPython.*', 'gmpy2', 'matplotlib', 'mpmath.*', 'pexpect',
          'scipy.*', 'traitlets.*']
ignore_missing_imports = true
