[metadata]
name = Diofant
version = attr: setuptools_scm.get_version
description = Computer algebra system (CAS) in Python
long_description = file: docs/README.rst
keywords = Math, CAS
license = BSD
url = https://diofant.readthedocs.io/
project_urls = Source Code = https://github.com/diofant/diofant/
               Bug Tracker = https://github.com/diofant/diofant/issues/
               Download = https://github.com/diofant/diofant/releases/
author = Sergey B Kirpichev et al
maintainer = Sergey B Kirpichev
maintainer_email = diofant@googlegroups.com
classifiers = Development Status :: 4 - Beta
              Intended Audience :: Education
              Intended Audience :: Science/Research
              License :: OSI Approved :: BSD License
              Operating System :: OS Independent
              Programming Language :: Python
              Topic :: Scientific/Engineering
              Topic :: Scientific/Engineering :: Mathematics
              Topic :: Scientific/Engineering :: Physics
              Topic :: Software Development :: Libraries :: Python Modules
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: Implementation :: CPython
[options]
zip_safe = True
packages = find:
python_requires = >=3.7
setup_requires = setuptools>=36.7.0
                 setuptools_scm
                 pip>=9.0.1
                 pytest-runner
                 isort
install_requires = mpmath>=0.19
                   strategies>=0.2.3
tests_require = diofant[develop]
[options.package_data]
diofant = tests/logic/*.cnf
[options.extras_require]
exports =
          numpy>=1.12.1,<=1.16.5
          scipy>=0.18
          cython
gmpy =
       gmpy2>=2.1.0a1,!=2.1.0b1
plot =
       matplotlib!=2.1.1
interactive = ipykernel
docs = sphinx>=1.6.7,!=2.1.0
       sphinxcontrib-bibtex
       sphinx_rtd_theme>=0.2.4
tests = pytest>=4.3
        hypothesis
        pytest-timeout
develop = %(tests)s
          flake8>=2.5.5,!=3.1.0
          flake8-docstrings>=1.3.1
          pep8-naming
          flake8-comprehensions
          flake8-isort
          flake8-rst
          flake8-quotes>=3.0
          pytest-xdist>=1.22.4
          pytest-cov
          pylint
          coverage
          pytest-runner
          isort
          codecov
[aliases]
test = pytest
[flake8]
ignore = E201,E202,E226,E241,E402,W503,F402,F821,N801,N802,N803,N806,D402,
         D103,D200,D100,D105,D205,D401,D102,D400,E741,D107,N807,W504,N815,
         SFS301
max-line-length = 7000
exclude = build,.eggs,.git,*.rst,*.cfg,*.yml
jobs = 1
per-file-ignores = diofant/__init__.py:F401,F403
                   diofant/tests/test_*.py:D103
                   diofant/tests/*/test_*.py:D103
[flake8-rst]
ignore = D101,D102,D103,D105,E226,E302,E305,E402,E741,F405,I001,N802,W504,
         E201,E241,D300,SFS301
max-line-length = 7000
exclude = build,.eggs,.git,*.cfg,*.yml
jobs = 1
bootstrap = from diofant import *
            a, b, c, d, t, x, y, z = symbols('a:d t x:z')
            k, m, n = symbols('k m n', integer=True)
            f, g, h = symbols('f:h', cls=Function)
            x
            y
filename = *.py *.rst
per-file-ignores = docs/index.rst:F403
                   docs/tutorial/intro.rst:F403
                   docs/tutorial/solvers.rst:F403
[tool:pytest]
minversion = 2.7.0
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
addopts = --durations=20
          -r X
          --doctest-glob='*.rst'
          --cov-config=setup.cfg
norecursedirs = build .eggs .git
timeout = 700
xfail_strict = true
filterwarnings = ignore::UserWarning
                 error::DeprecationWarning
[coverage:run]
branch = True
omit = conftest.py
       diofant/tests/*
       diofant/tests/*/*
parallel = True
[coverage:html]
directory = build/coverage/html
[coverage:report]
exclude_lines = pragma: no cover
                raise NotImplementedError
                return NotImplemented
[isort]
lines_after_imports = 2
skip = diofant/core/mul.py
       diofant/core/expr.py
       diofant/__init__.py
       diofant/core/__init__.py
       diofant/polys/__init__.py
atomic = True
[mypy-mpmath.*]
ignore_missing_imports = True
[mypy-strategies.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-gmpy2.*]
ignore_missing_imports = True
[mypy-IPython.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-xml.*]
ignore_missing_imports = True
