[metadata]
name = Diofant
version = attr: setuptools_scm.get_version
description = Computer algebra system (CAS) in Python
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
keywords = Math, CAS
license = BSD
url = https://diofant.readthedocs.io/
project_urls = Source Code = https://github.com/diofant/diofant/
               Bug Tracker = https://github.com/diofant/diofant/issues/
               Download = https://github.com/diofant/diofant/releases/
author = Sergey B Kirpichev et al
maintainer = Sergey B Kirpichev
maintainer_email = diofant@googlegroups.com
classifiers = Development Status :: 4 - Beta
              Intended Audience :: Education
              Intended Audience :: Science/Research
              License :: OSI Approved :: BSD License
              Operating System :: OS Independent
              Programming Language :: Python
              Topic :: Scientific/Engineering
              Topic :: Scientific/Engineering :: Mathematics
              Topic :: Scientific/Engineering :: Physics
              Topic :: Software Development :: Libraries :: Python Modules
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3.9
              Programming Language :: Python :: Implementation :: CPython
[options]
zip_safe = True
packages = find:
python_requires = >=3.9
setup_requires = setuptools>=36.7.0
                 setuptools_scm
                 pip>=9.0.1
                 isort
install_requires = mpmath>=0.19
tests_require = diofant[develop]
[options.package_data]
diofant = tests/logic/*.cnf
[options.extras_require]
exports =
          numpy>=1.16.2
          scipy>=0.18
          cython
gmpy =
       gmpy2>=2.1.0a1,!=2.1.0b1
plot =
       matplotlib!=2.1.1,<3.4.0
interactive = ipykernel
docs = sphinx>=4.0.0
       sphinxcontrib-bibtex>=2.1.3
       sphinx_rtd_theme>=0.2.4
       docutils<0.17
tests = pytest>=4.3
        hypothesis
        pytest-timeout
develop = %(tests)s
          flake8>=3.8.0
          flake8-docstrings>=1.3.1
          pep8-naming
          flake8-comprehensions
          flake8-isort
          flake8-rst
          flake8-quotes>=3.0
          flake8-sfs
          pytest-xdist>=1.22.4
          pytest-cov
          pylint>=2.6.0,<2.7.3
          coverage
          isort
          codecov>=2.1.8
          types-pkg_resources
          mypy
          astroid<=2.5.3
          build
[flake8]
ignore = E201,E202,E226,E241,E402,W503,F402,F821,N801,N802,N803,N806,D402,
         D103,D200,D100,D105,D205,D401,D102,D400,E741,D107,N807,W504,N815,
         SFS301,D106
max_line_length = 7000
exclude = build,.eggs,.git,*.rst,*.cfg,*.yml
jobs = 1
per_file_ignores = diofant/printing/*.py:SFS101
                   diofant/tests/printing/*.py:SFS101
                   diofant/vector/coordsysrect.py:SFS101
                   diofant/utilities/*.py:SFS101
                   diofant/tests/utilities/*.py:SFS101
                   diofant/diffgeom/diffgeom.py:SFS101
                   diofant/tests/external/*.py:SFS101
                   diofant/core/*.py:SFS101
                   diofant/solvers/diophantine.py:SFS101
[flake8-rst]
ignore = D101,D102,D103,D105,E226,E302,E305,E402,E741,F405,I001,N802,W504,
         E201,E241,D300,SFS301,I003,I005
exclude = build,.eggs,.git,*.cfg,*.yml
jobs = 1
bootstrap = from diofant import *
            a, b, c, d, t, x, y, z = symbols('a:d t x:z')
            k, m, n = symbols('k m n', integer=True)
            f, g, h = symbols('f:h', cls=Function)
            x
            y
filename = *.py *.rst
per_file_ignores = docs/index.rst:F403
                   docs/tutorial/intro.rst:F403
                   docs/tutorial/solvers.rst:F403
                   diofant/core/relational.py:SFS101
                   diofant/ntheory/factor_.py:SFS101
                   diofant/matrices/matrices.py:SFS101
[tool:pytest]
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
addopts = --durations=20
          -r X
          --doctest-glob='*.rst'
          --cov-config=setup.cfg
          -n auto
norecursedirs = build .eggs .git
timeout = 1000
xfail_strict = true
filterwarnings = ignore::UserWarning
                 error::DeprecationWarning
[coverage:run]
branch = True
omit = conftest.py
       diofant/tests/*
       diofant/tests/*/*
parallel = True
[coverage:html]
directory = build/coverage/html
[coverage:report]
exclude_lines = pragma: no cover
                raise NotImplementedError
                return NotImplemented
[isort]
lines_after_imports = 2
skip = diofant/core/mul.py
       diofant/core/expr.py
       diofant/__init__.py
       diofant/core/__init__.py
       diofant/polys/__init__.py
atomic = True
[pylint]
jobs = 0
init_hook = "import sys; sys.setrecursionlimit(2000)"  # PyCQA/pylint#2388
[pylint.messages control]
disable = blacklisted-name,
          invalid-name,
          missing-docstring,
          unneeded-not,
          singleton-comparison,
          misplaced-comparison-constant,
          unidiomatic-typecheck,
          consider-using-enumerate,
          bad-classmethod-argument,
          bad-mcs-method-argument,
          bad-mcs-classmethod-argument,
          single-string-used-for-slots,
          line-too-long,
          too-many-lines,
          multiple-statements,
          superfluous-parens,
          bad-whitespace,
          unexpected-line-ending-format,
          bad-continuation,
          wrong-spelling-in-comment,
          wrong-spelling-in-docstring,
          invalid-characters-in-docstring,
          multiple-imports,
          wrong-import-order,
          ungrouped-imports,
          wrong-import-position,
          useless-import-alias,
          len-as-condition,
          bad-option-value,
          function-redefined,
          not-in-loop,
          return-arg-in-generator,
          nonexistent-operator,
          duplicate-argument-name,
          abstract-class-instantiated,
          bad-reversed-sequence,
          too-many-star-expressions,
          invalid-star-assignment-target,
          star-needs-assignment-target,
          nonlocal-and-global,
          continue-in-finally,
          nonlocal-without-binding,
          used-prior-global-declaration,
          misplaced-format-function,
          method-hidden,
          access-member-before-definition,
          no-method-argument,
          no-self-argument,
          inherit-non-class,
          inconsistent-mro,
          duplicate-bases,
          non-iterator-returned,
          unexpected-special-method-signature,
          invalid-length-returned,
          import-error,
          relative-beyond-top-level,
          used-before-assignment,
          undefined-variable,
          undefined-all-variable,
          invalid-all-object,
          no-name-in-module,
          unbalanced-tuple-unpacking,
          raising-bad-type,
          bad-exception-context,
          misplaced-bare-raise,
          raising-non-exception,
          no-member,
          not-callable,
          assignment-from-no-return,
          no-value-for-parameter,
          too-many-function-args,
          unexpected-keyword-arg,
          assignment-from-none,
          invalid-unary-operand-type,
          unsupported-binary-operation,
          repeated-keyword,
          not-an-iterable,
          not-a-mapping,
          unsupported-membership-test,
          unsubscriptable-object,
          unsupported-assignment-operation,
          unsupported-delete-operation,
          invalid-metaclass,
          unhashable-dict-key,
          logging-unsupported-format,
          logging-format-truncated,
          logging-too-many-args,
          logging-too-few-args,
          bad-format-character,
          truncated-format-string,
          mixed-format-string,
          format-needs-mapping,
          missing-format-string-key,
          too-many-format-args,
          too-few-format-args,
          bad-str-strip-call,
          invalid-envvar-value,
          print-statement,
          parameter-unpacking,
          unpacking-in-except,
          old-raise-syntax,
          backtick,
          long-suffix,
          import-star-module-level,
          fatal,
          method-check-failed,
          raw-checker-failed,
          bad-inline-option,
          locally-disabled,
          locally-enabled,
          file-ignored,
          suppressed-message,
          useless-suppression,
          use-symbolic-message-instead,
          literal-comparison,
          comparison-with-itself,
          no-self-use,
          no-staticmethod-decorator,
          cyclic-import,
          duplicate-code,
          too-many-ancestors,
          too-many-instance-attributes,
          too-few-public-methods,
          too-many-public-methods,
          too-many-return-statements,
          too-many-branches,
          too-many-arguments,
          too-many-locals,
          too-many-statements,
          too-many-boolean-expressions,
          consider-merging-isinstance,
          too-many-nested-blocks,
          simplifiable-if-statement,
          redefined-argument-from-local,
          no-else-return,
          consider-using-ternary,
          trailing-comma-tuple,
          stop-iteration-return,
          simplify-boolean-expression,
          inconsistent-return-statements,
          useless-return,
          consider-swap-variables,
          consider-using-join,
          consider-using-in,
          consider-using-get,
          chained-comparison,
          dangerous-default-value,
          pointless-statement,
          pointless-string-statement,
          expression-not-assigned,
          unnecessary-lambda,
          duplicate-key,
          assign-to-new-keyword,
          useless-else-on-loop,
          exec-used,
          eval-used,
          confusing-with-statement,
          using-constant-test,
          comparison-with-callable,
          lost-exception,
          assert-on-tuple,
          attribute-defined-outside-init,
          bad-staticmethod-argument,
          protected-access,
          arguments-differ,
          signature-differs,
          abstract-method,
          super-init-not-called,
          no-init,
          non-parent-init-called,
          useless-super-delegation,
          unnecessary-semicolon,
          bad-indentation,
          mixed-indentation,
          lowercase-l-suffix,
          wildcard-import,
          deprecated-module,
          relative-import,
          reimported,
          import-self,
          misplaced-future,
          fixme,
          invalid-encoded-data,
          global-variable-undefined,
          global-variable-not-assigned,
          global-statement,
          global-at-module-level,
          unused-import,
          unused-variable,
          unused-argument,
          unused-wildcard-import,
          redefined-outer-name,
          redefined-builtin,
          redefine-in-handler,
          undefined-loop-variable,
          cell-var-from-loop,
          possibly-unused-variable,
          try-except-raise,
          nonstandard-exception,
          binary-op-exception,
          raising-format-tuple,
          keyword-arg-before-vararg,
          logging-not-lazy,
          logging-format-interpolation,
          logging-fstring-interpolation,
          bad-format-string-key,
          unused-format-string-key,
          bad-format-string,
          missing-format-argument-key,
          unused-format-string-argument,
          format-combined-specification,
          missing-format-attribute,
          invalid-format-index,
          anomalous-backslash-in-string,
          anomalous-unicode-escape-in-string,
          bad-open-mode,
          redundant-unittest-assert,
          deprecated-method,
          bad-thread-instantiation,
          shallow-copy-environ,
          invalid-envvar-default,
          subprocess-popen-preexec-fn,
          next-method-called,
          metaclass-assignment,
          indexing-exception,
          raising-string,
          exception-message-attribute,
          invalid-str-codec,
          xreadlines-attribute,
          deprecated-sys-function,
          exception-escape,
          comprehension-escape,
          import-outside-toplevel,
          no-else-continue,
          no-else-raise,
          no-else-break,
          redeclared-assigned-name,
          self-assigning-variable,
          arguments-out-of-order,
          unnecessary-comprehension,
          simplifiable-if-expression,
          invalid-overridden-method,
          invalid-str-returned,
          isinstance-second-argument-not-valid-type,
          missing-final-newline,
          mixed-line-endings,
          trailing-newlines,
          trailing-whitespace,
          raise-missing-from,
          super-with-arguments
[mypy]
follow_imports = silent
[mypy-mpmath.*]
ignore_missing_imports = True
[mypy-strategies.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-gmpy2.*]
ignore_missing_imports = True
[mypy-IPython.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-xml.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
