[metadata]
name = Diofant
version = attr: setuptools_scm.get_version
description = Computer algebra system (CAS) in Python
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
keywords = Math, CAS
license = BSD
url = https://diofant.readthedocs.io/
project_urls = Source Code = https://github.com/diofant/diofant/
               Bug Tracker = https://github.com/diofant/diofant/issues/
               Download = https://github.com/diofant/diofant/releases/
author = Sergey B Kirpichev et al
maintainer = Sergey B Kirpichev
maintainer_email = diofant@googlegroups.com
classifiers = Development Status :: 4 - Beta
              Intended Audience :: Education
              Intended Audience :: Science/Research
              License :: OSI Approved :: BSD License
              Operating System :: OS Independent
              Programming Language :: Python
              Topic :: Scientific/Engineering
              Topic :: Scientific/Engineering :: Mathematics
              Topic :: Scientific/Engineering :: Physics
              Topic :: Software Development :: Libraries :: Python Modules
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3.10
              Programming Language :: Python :: Implementation :: CPython
[options]
zip_safe = True
packages = find:
python_requires = >=3.10
setup_requires = setuptools>=52
                 pip>=20.3
install_requires = mpmath>=1.2
                   packaging
tests_require = diofant[develop]
[options.package_data]
diofant = tests/logic/*.cnf
[options.extras_require]
exports = numpy>=1.19
          scipy>=1.6
          cython
gmpy = gmpy2>=2.1.0b5
plot = matplotlib>=3.5.0rc1
interactive = ipykernel
docs = sphinx>=4
       sphinxcontrib-bibtex>=2.1
       sphinxcontrib-autoprogram
       sphinx_rtd_theme>=0.2
tests = pytest>=6
        hypothesis
        pytest-timeout
        pexpect
develop = %(tests)s
          flake8>=3.8
          flake8-docstrings>=1.3
          pep8-naming
          flake8-comprehensions
          flake8-isort>=4.1
          flake8-rst
          flake8-quotes>=3
          flake8-sfs
          pytest-xdist>=1.22
          pytest-cov
          pylint>=2.6
          coverage[toml]>=6
          coverage_enable_subprocess
          types-pkg_resources
          mypy
          build
[flake8]
ignore = E201,E202,E226,E241,E402,W503,F402,F821,N801,N802,N803,N806,D402,
         D103,D200,D100,D105,D205,D401,D102,D400,E741,D107,N807,W504,N815,
         SFS301,N818
max_line_length = 7000
exclude = build,.eggs,.git,*.rst,*.cfg,*.yml
jobs = 1
per_file_ignores = diofant/printing/*.py:SFS101
                   diofant/tests/printing/*.py:SFS101
                   diofant/vector/coordsysrect.py:SFS101
                   diofant/utilities/*.py:SFS101
                   diofant/tests/utilities/*.py:SFS101
                   diofant/diffgeom/diffgeom.py:SFS101
                   diofant/tests/external/*.py:SFS101
                   diofant/core/*.py:SFS101
                   diofant/solvers/diophantine.py:SFS101
[flake8-rst]
ignore = D101,D102,D103,D105,E226,E302,E305,E402,E741,F405,I001,N802,W504,
         E201,E241,D300,SFS301,I003,I005
exclude = build,.eggs,.git,*.cfg,*.yml
jobs = 1
bootstrap = from diofant import *
            a, b, c, d, t, x, y, z = symbols('a:d t x:z')
            k, m, n = symbols('k m n', integer=True)
            f, g, h = symbols('f:h', cls=Function)
            x
            y
filename = *.py *.rst
per_file_ignores = docs/index.rst:F403
                   docs/tutorial/intro.rst:F403
                   docs/tutorial/solvers.rst:F403
                   diofant/core/relational.py:SFS101
                   diofant/ntheory/factor_.py:SFS101
                   diofant/matrices/matrices.py:SFS101
